--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^2.1.1",
+    "jquery": "^3.4.0",
     "style-loader": "^0.23.1",
+    "uuid": "^3.3.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
