--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^3.2.0"
   }
 }
